--- a/server/.env.example
+++ b/server/.env.example
@@ -3,7 +3,7 @@ SERVER_PORT=3000
 BCRYPT_SALT=10
 SECRET_KEY=1j3h1kh241j24hkb5bsdiu34
 
-DB_CONNECTION=mongodb://localhost:27017
-DB_NAME=jobhunt
+DB_CONNECTION=mongodb+srv://bereket:berafish1985@cluster0-rhrki.mongodb.net
+DB_NAME=test
 
-PUBLIC_PATH=/Users/petehouston/Study/MUM/Courses/MWA/project/mean-jobhunt/static
+
