--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,5 @@
-SERVER_PORT=3000
+SECRET_KEY=Asaad
+DB_USERNAME = bereket
+DB_PASSWORD = *********
 
-BCRYPT_SALT=10
-SECRET_KEY=1j3h1kh241j24hkb5bsdiu34
-
-DB_CONNECTION=mongodb+srv://bereket:berafish1985@cluster0-rhrki.mongodb.net
-DB_NAME=test
-
-
+PUBLIC_PATH=/Users/bereketabraham/Desktop/MUM/MWA/MWA_Jan2020/Projects/mean-jobhunt-master/static
